# dataengineering_openai

./: .env.example  .gitignore  LINKEDIN_POST.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
dags/: daily_batch_etl.py  hourly_safety_monitoring.py
dags/common/: callbacks.py  sensors.py
docker/airflow/: Dockerfile  requirements.txt
docker/faust/: Dockerfile  requirements.txt
docker/spark/: Dockerfile
scripts/: setup_snowflake.py
src/config/: settings.py
src/dashboard/: app.py  serve.py
src/generators/: api_usage_events.py  base.py  billing_events.py  conversation_events.py  runner.py  safety_events.py  user_events.py
src/quality/expectations/: validate_staging.py  validate_warehouse.py
src/safety/compliance/: data_retention.py
src/safety/detectors/: anomaly_detector.py  prompt_injection_detector.py  quarantine_manager.py
src/spark_jobs/common/: spark_session.py
src/spark_jobs/jobs/: build_canonical_dau.py  build_canonical_engagement.py  build_canonical_revenue.py  build_safety_dashboard.py  etl_api_usage.py  etl_billing.py  etl_conversations.py  etl_users.py
src/spark_jobs/transformations/: deduplication.py  engagement_scoring.py  pii_masking.py  scd_type2.py  sessionization.py
src/streaming/: app.py
src/streaming/agents/: __init__.py
src/streaming/sinks/: minio_parquet_sink.py
tests/: conftest.py
tests/dags/: test_dag_integrity.py
tests/unit/: test_deduplication.py  test_generators.py  test_pii_masking.py  test_prompt_injection.py  test_scd_type2.py  test_sessionization.py
(+5 files in other folders)
